--- a/src/userinterface/clockwork.css
+++ b/src/userinterface/clockwork.css
@@ -22,6 +22,10 @@
 	-fx-background-color: #182733;
 }
 
+.scroll-pane {
+    -fx-background-color:transparent;
+}
+
 #calendar-control {
 	-fx-padding: 1;  
 	-fx-background-insets: 0, 100;
