DefaultDummyLayout has columns instead of rows now, with fancy text styles and color to highlight today

--- a/src/userinterface/clockwork.css
+++ b/src/userinterface/clockwork.css
@@ -10,15 +10,15 @@
 	-fx-fill: #FFFFFF;
 }
 
-.HBox{
+.h-box{
 	-fx-background-color: #182733;
 }
 
-.GridPane{
+.grid-pane{
 	-fx-background-color: #182733;
 }
 
-.BorderPane{
+.border-pane{
 	-fx-background-color: #182733;
 }
 
