--- a/src/userinterface/clockwork.css
+++ b/src/userinterface/clockwork.css
@@ -1,34 +1,56 @@
-.label{
+.label {
 	-fx-text-fill: #FFFFFF;
 }
 
-.text{
+.text {
 	-fx-text-fill: #FFFFFF;
 }
 
+.button {
+	-fx-background-color: transparent;
+}
 .button:focused {
-    -fx-underline: true;
-    -fx-font-weight: bold;
+    -fx-background-color: rgba(0, 100, 100, 0.5);
 }
 
-.glyph-icon{
+.glyph-icon {
 	-fx-fill: #FFFFFF;
 }
 
-.h-box{
+.hbox {
 	-fx-background-color: #182733;
 }
 
-.grid-pane{
+.grid {
 	-fx-background-color: #182733;
 }
 
-.border-pane{
+.border-pane {
 	-fx-background-color: #182733;
 }
 
 .scroll-pane {
     -fx-background-color:transparent;
+}
+
+.list-cell:filled:selected:focused, .list-cell:filled:selected {
+    -fx-background-color: #182733;
+    -fx-text-fill: white;
+}
+
+.list-cell:odd { 
+    -fx-background-color: #182733;
+    -fx-text-fill: white;
+}
+
+.list-cell:even { 
+    -fx-background-color: #182733;
+    -fx-text-fill: white;
+}
+
+.list-cell:filled:hover {
+    -fx-background-color: #182733;
+    -fx-text-fill: white;
 }
 
 #calendar-control {
